Use run time port

--- a/kibana/Dockerfile
+++ b/kibana/Dockerfile
@@ -1,4 +1,5 @@
 FROM index.alauda.cn/library/centos:6
+#FROM docker.io/centos:6
 
 RUN yum install -y wget tar
 
@@ -9,7 +10,9 @@ mv kibana-4.0.2-linux-x64 kibana && \
 rm kibana-4.0.2-linux-x64.tar.gz
 
 ADD conf/kibana.yml /opt/kibana/config/kibana.yml
+ADD run.sh /run.sh
 
 EXPOSE 5601
 
-ENTRYPOINT ["/opt/kibana/bin/kibana"]
+ENTRYPOINT ["/run.sh"]
+#ENTRYPOINT ["/opt/kibana/bin/kibana"]
