update elastic host

--- a/logstash/conf/logstash.conf
+++ b/logstash/conf/logstash.conf
@@ -8,7 +8,7 @@ input {
 output {
     elasticsearch {
         protocol => "http"
-        host => "elasticsearch"
-        port => "9200"
+        host => "ELASTICSEARCH_PORT_9200_TCP_ADDR"
+        port => "ELASTICSEARCH_PORT_9200_TCP_PORT"
     }
 }
